Fix input width to avoid shifts when rendering

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -3,5 +3,6 @@
   justify-content: space-between;
   align-items: center;
   gap: 15px;
-  margin: 10px;
+  margin: 10px auto;
+  width: 400px;
 }
