--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,7 +1,3 @@
-form {
-  margin: 0 auto;
-}
-
 input {
   border-radius: 15px;
   border: 1px solid transparent;
